Add Telegram bot implementation and workflow configuration
- Created bot.py to handle image processing and KML file generation from tables in images.
- Added GitHub Actions workflow in bot.yml for automated deployment.
- Updated requirements.txt to include python-telegram-bot dependency.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pyarrow==21.0.0
 pypdfium2==4.30.0
 pytesseract==0.3.13
 python-dateutil==2.9.0.post0
+python-telegram-bot==21.8
 pytz==2025.2
 six==1.17.0
 soupsieve==2.8
